# python_time_manager

./: .gitignore  404.html  README.md  db_engine.html  index.html  mkdocs.yml  model_event.html  model_project.html  model_project_users.html  model_user.html  objects.inv  pyproject.toml  sitemap.xml  test.py
.github/workflows/: main.yml
blog/: README.md
blog/uml/: orig_database_design.plantuml
docs/: db_engine.md  index.md  model_event.md  model_project.md  model_project_users.md  model_user.md
documents/: README.md
documents/uml/: database_design.plantuml
search/: search_index.js  search_index.json
src/python_time_manager/engine/: _gen_uuid.py  database_engine.py
src/python_time_manager/engine/crud/: __init__.py  create.py
src/python_time_manager/models/: __init__.py  event.py  project.py  project_users.py  tables.py  user.py
