[tool.poetry]
name = "python-time-manager"
version = "0.1.0"
description = ""
authors = ["Joseph Sayler <joseph.sayler@gmail.com>"]
readme = "README.md"
packages = [{include = "python_time_manager", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
sqlalchemy = "^2.0.0"
black = "^22.12.0"
pydantic = "^1.10.4"
mypy = "^0.991"
mypy-extensions = "^0.4.3"
alembic = "^1.9.2"
mimesis = "^7.0.0"
mkdocs = "^1.4.2"
mkdocstrings = {extras = ["python"], version = "^0.20.0"}
mkdocs-material = "^9.0.12"
mkdocs-git-revision-date-localized-plugin = "^1.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
